--- a/spriteMaker/spriteMaker/PopupStoryboards/AnimatedPreviewPopupViewController.storyboard
+++ b/spriteMaker/spriteMaker/PopupStoryboards/AnimatedPreviewPopupViewController.storyboard
@@ -35,7 +35,7 @@
                                     </pickerView>
                                     <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kIi-0N-w6j">
                                         <rect key="frame" x="0.0" y="110" width="200" height="40"/>
-                                        <color key="backgroundColor" white="0.17999999999999999" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="BU7-By-IoP"/>
                                         </constraints>
@@ -48,9 +48,9 @@
                                             <action selector="tappedPauseBtn:" destination="X4g-Ww-Kze" eventType="touchUpInside" id="PsK-AM-nO9"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SzQ-zh-fA3">
+                                    <button opaque="NO" alpha="0.29999999999999999" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SzQ-zh-fA3">
                                         <rect key="frame" x="165" y="10" width="25" height="24"/>
-                                        <color key="tintColor" white="1" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" image="xmark.circle.fill" catalog="system">
                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
                                         </state>
@@ -59,7 +59,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" white="0.17999999999999999" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="kIi-0N-w6j" firstAttribute="leading" secondItem="eGC-Ta-E5m" secondAttribute="leading" id="Baj-M6-qVm"/>
                                     <constraint firstItem="kIi-0N-w6j" firstAttribute="top" secondItem="bc0-qL-TSC" secondAttribute="bottom" id="G5a-ci-vQS"/>
