--- a/spriteMaker/spriteMaker/PopupStoryboards/FrameAndLayerDrawer.storyboard
+++ b/spriteMaker/spriteMaker/PopupStoryboards/FrameAndLayerDrawer.storyboard
@@ -25,26 +25,52 @@
                                 </connections>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GUa-KS-fDY">
-                                <rect key="frame" x="31" y="44" width="352" height="281.5"/>
+                                <rect key="frame" x="31" y="44" width="352" height="250"/>
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Ddp-hF-Fr1">
-                                        <rect key="frame" x="0.0" y="30" width="352" height="251.5"/>
-                                        <color key="backgroundColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="jlP-yb-GqS">
-                                            <size key="itemSize" width="128" height="128"/>
+                                        <rect key="frame" x="0.0" y="44" width="352" height="196"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="0.0" id="jlP-yb-GqS">
+                                            <size key="itemSize" width="128" height="141"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                            <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                                            <inset key="sectionInset" minX="10" minY="0.0" maxX="10" maxY="10"/>
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DrawerCell" id="QhF-7D-dkd" customClass="DrawerCell" customModule="spriteMaker" customModuleProvider="target">
-                                                <rect key="frame" x="10" y="10" width="128" height="128"/>
+                                                <rect key="frame" x="10" y="0.0" width="128" height="141"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="TQE-yP-vCL">
-                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="141"/>
                                                     <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Y9w-0Y-ZUw">
+                                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="Y9w-0Y-ZUw" secondAttribute="height" multiplier="1:1" id="Vul-Rt-stD"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="16w-1T-N3F">
+                                                            <rect key="frame" x="0.0" y="128" width="128" height="13"/>
+                                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        </view>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="16w-1T-N3F" firstAttribute="leading" secondItem="TQE-yP-vCL" secondAttribute="leading" id="UZy-Eh-69m"/>
+                                                        <constraint firstAttribute="bottom" secondItem="16w-1T-N3F" secondAttribute="bottom" id="Usk-Kx-eqH"/>
+                                                        <constraint firstItem="Y9w-0Y-ZUw" firstAttribute="leading" secondItem="TQE-yP-vCL" secondAttribute="leading" id="XQI-p1-IAA"/>
+                                                        <constraint firstAttribute="trailing" secondItem="16w-1T-N3F" secondAttribute="trailing" id="lbP-Y6-G6K"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Y9w-0Y-ZUw" secondAttribute="trailing" id="mGw-10-jKu"/>
+                                                        <constraint firstItem="16w-1T-N3F" firstAttribute="top" secondItem="Y9w-0Y-ZUw" secondAttribute="bottom" id="pAH-Ku-Des"/>
+                                                        <constraint firstItem="Y9w-0Y-ZUw" firstAttribute="top" secondItem="TQE-yP-vCL" secondAttribute="top" id="pEf-Wb-58c"/>
+                                                    </constraints>
                                                 </collectionViewCellContentView>
-                                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <size key="customSize" width="128" height="141"/>
+                                                <connections>
+                                                    <outlet property="categoryLabel" destination="16w-1T-N3F" id="yzG-Gg-1xx"/>
+                                                    <outlet property="imageView" destination="Y9w-0Y-ZUw" id="Rve-Ro-gaV"/>
+                                                </connections>
                                             </collectionViewCell>
                                         </cells>
                                         <connections>
@@ -52,8 +78,8 @@
                                             <outlet property="delegate" destination="Y6W-OH-hqX" id="1fJ-YO-eH5"/>
                                         </connections>
                                     </collectionView>
-                                    <button opaque="NO" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nEk-15-NJC">
-                                        <rect key="frame" x="317" y="5" width="25" height="24"/>
+                                    <button opaque="NO" alpha="0.29999999999999999" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nEk-15-NJC">
+                                        <rect key="frame" x="317" y="10" width="25" height="24"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" image="xmark.circle.fill" catalog="system">
                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
@@ -65,10 +91,10 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="Ddp-hF-Fr1" secondAttribute="bottom" id="5GC-hD-DDR"/>
-                                    <constraint firstItem="nEk-15-NJC" firstAttribute="top" secondItem="GUa-KS-fDY" secondAttribute="top" constant="5" id="G2N-Ic-Mgt"/>
-                                    <constraint firstAttribute="width" secondItem="GUa-KS-fDY" secondAttribute="height" multiplier="5:4" id="MKJ-CH-OR6"/>
-                                    <constraint firstItem="Ddp-hF-Fr1" firstAttribute="top" secondItem="GUa-KS-fDY" secondAttribute="top" constant="30" id="Rk3-fe-tXz"/>
+                                    <constraint firstAttribute="bottom" secondItem="Ddp-hF-Fr1" secondAttribute="bottom" constant="10" id="5GC-hD-DDR"/>
+                                    <constraint firstItem="nEk-15-NJC" firstAttribute="top" secondItem="GUa-KS-fDY" secondAttribute="top" constant="10" id="G2N-Ic-Mgt"/>
+                                    <constraint firstAttribute="height" constant="250" id="fAO-C0-6bB"/>
+                                    <constraint firstItem="Ddp-hF-Fr1" firstAttribute="top" secondItem="nEk-15-NJC" secondAttribute="bottom" constant="10" id="gu9-fO-Oa9"/>
                                     <constraint firstItem="Ddp-hF-Fr1" firstAttribute="leading" secondItem="GUa-KS-fDY" secondAttribute="leading" id="pA4-e8-qeq"/>
                                     <constraint firstAttribute="trailing" secondItem="Ddp-hF-Fr1" secondAttribute="trailing" id="rWn-Ox-ovJ"/>
                                     <constraint firstAttribute="trailing" secondItem="nEk-15-NJC" secondAttribute="trailing" constant="10" id="uKG-iA-Ubj"/>
@@ -90,6 +116,7 @@
                     <connections>
                         <outlet property="drawerCV" destination="Ddp-hF-Fr1" id="TPI-mA-DOv"/>
                         <outlet property="drawerView" destination="GUa-KS-fDY" id="RAl-m4-0lt"/>
+                        <outlet property="heightConstraint" destination="fAO-C0-6bB" id="gCO-O7-2D9"/>
                         <outlet property="topConstraint" destination="o3t-aI-ZH1" id="tcb-KD-Wlf"/>
                     </connections>
                 </viewController>
@@ -100,7 +127,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-62" y="94"/>
+            <point key="canvasLocation" x="-62.318840579710148" y="93.75"/>
         </scene>
     </scenes>
     <resources>
